# fops

./: CMakeLists.txt  README.md
fopslib/: fops.h  fops_c.h
fopslib/src/: fops.cpp
